--- a/final/index.html
+++ b/final/index.html
@@ -8,20 +8,20 @@
     <style>
     </style>
 
-  </head>
-  
+  </head
   <body>
+    
   	<header>
   		<div class="container">
   			<ul>
   				<li><img src="img/apple-logo.png"></li>
-  				<li>Mac</li>
-  				<li>iPad</li>
-  				<li>iPhone</li>
-  				<li>Watch</li>
-  				<li>TV</li>
-  				<li>Music</li>
-  				<li>Support</li>
+  				<li></li>
+  				<li></li>
+  				<li></li>
+  				<li></li>
+  				<li></li>
+  				<li></li>
+  				<li></li>
   				<li><img src="img/search.png"></li>
   				<li><img src="img/bag.png"></li>
   			</ul>
@@ -31,10 +31,10 @@
   		<img src="img/iphone.jpg">
   	</section>
   	<section class="portals-wrap">
-  		<img src="img/made_by_apple.jpg">
-  		<img src="img/ipad_pro.jpg">
-  		<img src="img/airpods.jpg">
-  		<img src="img/apple_tv.jpg">
+  		<img src="img/iphone.jpg">
+  		<img src="img/iphone.jpg">
+  		<img src="img/iphone.jpg">
+  		<img src="img/iphone.jpg">
   	</section>
   	<footer>
   		<div class="container">
